# config

./: .gitignore  CMakeLists.txt  README.md  test.cfg
src/: CMakeLists.txt  CommandoLion.cpp  Config.cpp  Configured.cpp  Derived.cpp  main.cpp
src/include/: CommandoLion.hpp  Config.hpp  Configured.hpp  Derived.hpp
